versioned_docs/version-2.17.0/platforms/chimeraos.mdx
---
sidebar_position: 8
description: "Install Zaparoo on ChimeraOS: launch Steam games, GOG games, emulators, EmuDeck, RetroDECK, and scripts from NFC cards on ChimeraOS gaming devices."
keywords: [zaparoo chimeraos, chimeraos nfc, chimera game launcher nfc, zaparoo chimera]
---

# ChimeraOS

:::warning[Beta]
ChimeraOS support is currently in beta. Some features may not work as expected.
:::

Zaparoo Core on [ChimeraOS](https://chimeraos.org/) supports launching Steam games, GOG games via the Chimera web app, standalone emulators, EmuDeck, RetroDECK, Bottles, Faugus, Moonlight, and shell scripts. Release builds are available for both AMD64 and ARM64 architectures.

## File paths

| Item               | Path                                   |
| ------------------ | -------------------------------------- |
| Config file        | `~/.config/zaparoo/config.toml`        |
| Data directory     | `~/.local/share/zaparoo`               |
| Log file           | `/tmp/<session_id>-zaparoo/core.log`   |
| Mappings directory | `~/.local/share/zaparoo/mappings`      |

Where `~` is the home directory of the `gamer` user.

## Install

Access the terminal with `Ctrl+Alt+F2` (default credentials: `gamer` / `gamer`) and run:

```bash
curl -fsSL https://zaparoo.org/install.sh | bash
```

This installs all necessary components and sets up the service to run on startup. Since ChimeraOS has an immutable root filesystem, the installation is user-local (installed to `~/.local/bin`). After installation, Core checks for new releases and can update itself in place; see [Core updates](../core/updates.md).

## Uninstall

Remove the installed components, leaving the application binary until last:

```bash
~/.local/bin/zaparoo -uninstall service
~/.local/bin/zaparoo -uninstall desktop
sudo ~/.local/bin/zaparoo -uninstall hardware
~/.local/bin/zaparoo -uninstall application
```

## Readers

<ReaderSupport platformId="chimeraos" />

## Launchers

| Launcher      | Systems | Notes                               |
| ------------- | ------- | ----------------------------------- |
| Steam         | PC      | Games and non-Steam shortcuts       |
| ChimeraGOG    | PC      | GOG games from Chimera web app      |
| Standalone emulators | Multiple | Installed native, AppImage, or Flatpak emulators |
| EmuDeck       | Multiple | Systems from an EmuDeck installation |
| RetroDECK     | Multiple | Systems from a RetroDECK installation |
| Bottles       | PC      | Programs from Bottles               |
| Faugus        | PC      | Games from Faugus Launcher          |
| Moonlight     | PC      | Streamed apps through Moonlight     |
| Kodi          | Media   | Videos, movies, TV shows, music     |
| Shell Scripts | Any     | Custom `.sh` file execution         |

### Steam

Launches games from your Steam library. Both official Steam games and non-Steam shortcuts added to your library are detected.

Games are indexed from:
- `~/.steam/steam/steamapps/`
- `~/.local/share/Steam/`

To manually launch a Steam game, write `steam://<app_id>` to a token.

### Emulators

Core registers launchers for emulators it finds installed, whether native, AppImage, or Flatpak, and adds EmuDeck and RetroDECK systems when either is installed. Detection rules, supported systems, file types, and pointer files are listed under [standalone emulators](./linux/launchers.md#standalone-emulators), [EmuDeck](./linux/launchers.md#emudeck), and [RetroDECK](./linux/launchers.md#retrodeck) on the Linux launchers page. Use [`launchers.preference`](../core/config.md#preference) to choose between the `Native`, `EmuDeck`, and `RetroDECK` groups.

### Bottles, Faugus, and Moonlight

Programs from [Bottles](./linux/launchers.md#bottles), games from [Faugus Launcher](./linux/launchers.md#faugus), and streamed apps through [Moonlight](./linux/launchers.md#moonlight) are indexed and launched the same way as on desktop Linux.

### Gaming Mode

Core manages gamescope focus for non-Steam launchers in Gaming Mode, including ChimeraGOG, Kodi, scripts, and custom launchers. It restores the previous focus state after the launched window closes. Return to Menu stops the active launcher; ChimeraOS remains responsible for displaying its menu.

### ChimeraGOG

Zaparoo automatically indexes GOG games installed through the Chimera web app.

Games are indexed from:
- `~/.local/share/chimera/content/gog/`

Games are launched using the `gog://` scheme.

### Kodi

Launch media content from a [Kodi](https://kodi.tv/) instance running on your network.

Supported content:
- Video and audio files
- Movies and TV episodes
- Music (songs, albums, artists)

```toml title="config.toml"
[[launchers.default]]
launcher = "Kodi"
server_url = "http://kodi:8080"
```

Replace `kodi:8080` with your Kodi instance's address and web interface port.

### Shell scripts

Execute arbitrary shell scripts. Requires explicit allow list configuration for security.

```toml title="config.toml"
[launchers]
allow_file = [
    "^/home/gamer/scripts/.*\\.sh$"
]
```
